Mostrando lista em Kivy.

--- a/studentdb.kv
+++ b/studentdb.kv
@@ -50,4 +50,4 @@ StudentDB:
         id: students_list_view
         adapter:
            #ListAdapter(data=root.list_student(), cls=main.StudentListButton)
-            ListAdapter(data=["Teu cú"], cls=main.StudentListButton)
+            ListAdapter(data=["Teu Nome"], cls=main.StudentListButton)
